kubernetes/overlays/homelab/prod/selfhosted/headlamp/tailscale-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: headlamp-tailscale
  namespace: selfhosted

spec:
  ingressClassName: tailscale
  defaultBackend:
    service:
      name: headlamp
      port:
        number: 80
  tls:
    - hosts:
        - headlamp
